# finetune-provenance

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
example_data/: eval.jsonl  train.jsonl
finetune_provenance/: __init__.py  cli.py  pipeline.py
finetune_provenance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
finetune_provenance/data/: __init__.py  curator.py  loader.py  provenance.py
finetune_provenance/eval/: __init__.py  calibration.py  metrics.py
finetune_provenance/experiment/: __init__.py  logger.py
finetune_provenance/influence/: __init__.py  attributor.py  embedder.py  tracer.py
finetune_provenance/training/: __init__.py  callbacks.py  lora_config.py  trainer.py
tests/: test_data.py  test_influence.py  test_pipeline.py
